CCD-6810: New endpoint to retrieve ShellCaseMapping tab definition (#1710)
* CCD-6810: New endpoint to retrieve ShellCaseMapping tab definition

* CCD-6810: Change to path variable

* CCD-6810: fix functional tests

* CCD-6810: fix functional tests

* CCD-6810: add unique constraint

* CCD-6810: fix functional tests

* CCD-6810: Fix issue with multiple case type versions in shell mapping table

* CCD-6810: Fix checkstyle issues